Refactor initialization process and improve code structure in Bedwars, KnockbackFFA, and SGFFA